# decide-exchange-model

./: .codeclimate.yml  .env.dist  .gitignore  .pre-commit-config.yaml  .travis.yml  Compare outcome per actor.ipynb  Newthreaty EU.ipynb  PivotTables.ipynb  README.md  __main__.py  calculations.py  codecov.yml  conda_build_config.yaml  csvParser.py  csvWriter.py  decide-gui.py  deploy_anaconda.sh  docker-compose.yml  environment.yml  graph.ipynb  helpers.py  meta.yaml  model-gui.py  model.py  pyproject.toml  random.csv  requirements.txt  setup.cfg  setup.py  test.csv  test.sh  test_calculations.py  test_parser.py  version.py
.github/: dependabot.yml
.github/workflows/: anaconda-publish.yml  python-publish.yml  tests.yml
data/: CoP21.compare.csv  data.csv  data_short.csv  verkiezing 2012.csv  verkiezing 2012.xdf
data/input/: .~lock.verkiezing 2012.csv#  CoP21.compare.csv  CoP21.csv  CoP21.xlsx  cop21.csv  copenhagen.csv  copenhagen_with_errors.csv  data_short.csv  important.csv  kopenhagen.csv  kopenhagen_with_errors.csv  sample_data.txt
data/output/: random.0.csv
data/output/data/verkiezing 2012.csv/: output.AOW.csv  output.Europa.csv  output.belasting.csv  output.bezuinig.csv  output.duur.csv  output.huur.csv  output.hypotheek.csv  output.ontslag.csv  output.ontwikkeling.csv  output.vreemd.csv  output.zorg.csv
data/output/data/verkiezing 2012.csv/exchanges/: 0.output.csv  1.output.csv  2.output.csv  3.output.csv  4.output.csv  5.output.csv  6.output.csv  7.output.csv  8.output.csv  9.output.csv
data/output/data/verkiezing 2012.csv/externalities/: externalities.1.csv  externalities.2.csv  externalities.3.csv  externalities.4.csv  externalities.5.csv  externalities.6.csv  externalities.7.csv  externalities.8.csv  externalities.9.csv
data/output/verkiezing 2012/: output.AOW.csv  output.Europa.csv  output.aow.csv  output.belasting.csv  output.bezuinig.csv  output.duur.csv  output.europa.csv  output.huur.csv  output.hypotheek.csv  output.ontslag.csv  output.ontwikkeling.csv  output.vreemd.csv  output.zorg.csv
data/output/verkiezing 2012/exchanges/: 0.output.csv  1.output.csv  2.output.csv  3.output.csv  4.output.csv  5.output.csv  6.output.csv  7.output.csv  8.output.csv  9.output.csv
data/output/verkiezing 2012/externalities/: externalities.0.csv  externalities.1.csv  externalities.2.csv  externalities.3.csv  externalities.4.csv  externalities.5.csv  externalities.6.csv  externalities.7.csv  externalities.8.csv  externalities.9.csv
decide/: __init__.py  cli.py  conftest.py  gui.py  log.py  qt-gui.py  qtgui.py  qtinputwindow.py  utils.py
decide/analysis/: queries.py
decide/data/: __init__.py  database.py  factory.py  modelfactory.py  reader.py  types.py  utils.py
decide/data/tests/: conftest.py  test_database.py  test_modelfactory.py  test_read.py
decide/ext/: covariance.py
decide/model/: __init__.py  base.py  calculations.py  equalgain.py  randomrate.py  utils.py
decide/model/csv/: reader.py  types.py
decide/model/csv/tests/: test_read.py
decide/model/data/: __init__.py  reader.py  types.py  utils.py
decide/model/data/tests/: test_read.py
decide/model/helpers/: csvparser.py  csvwriter.py  database.py  helpers.py
decide/model/helpers/test/: test_database.py  test_helpers.py
decide/model/observers/: exchanges_writer.py  externalities.py  issue_development.py  logger.py  observer.py  sqliteobserver.py
decide/model/observers/tests/: test_issue_development.py
decide/model/test/: test_abstractExchangeActor.py  test_actor.py  test_actorIssue.py  test_calculations.py  test_exchange.py  test_issue.py  test_model.py  test_parser.py  test_randomizedequalgain.py
decide/qt/: errordialog.py  errorgrid.py  helpers.py  inputwindow.py  mainwindow.py  utils.py
decide/qt/inputwindow/: gui.py  models.py  signals.py  widgets.py
decide/qt/inputwindow/tests/: test_comment.py  test_load.py
decide/qt/mainwindow/: errordialog.py  errorgrid.py  gui.py  helpers.py  settings.py  signals.py  widgets.py  worker.py
decide/qt/mainwindow/tests/: test_settings.py
decide/results/: __init__.py  covariance.py  descriptives.py  externalities.py  helpers.py  issuecomparison.py  nashbargainingsolution.py
decide/tests/: cli_test.py  test_cli.py  test_rex.py
docs/: CNAME  README.md  bibliography.md  build.md  gui.md  index.md  inputfiles.md  installation.md
docs/tools/: data.html  input.html  script.js
model/: AbstractExchange.py  AbstractModel.py  ActorIssue.py  __init__.py  base.py  calculations.py  equalgain.py  randomrate.py
model/equal/: EqualExchange.py  EqualGainModel.py
model/helpers/: CsvWriter.py  calculations.py  csvParser.py  csvWriter.py  csv_extractor.py  csvparser.py  csvwriter.py  database.py  helpers.py  test_parser.py  xdfparse.py
model/helpers/test/: test_database.py
model/observers/: exchanges_writer.py  externalities.py  history_writer.py  initial_exchanges.py  issue_development.py  logger.py  observer.py  sqliteobserver.py
model/random/: RandomExchange.py  RandomRateModel.py
model/test/: test_abstractExchangeActor.py  test_actor.py  test_actorIssue.py  test_calculations.py  test_exchange.py  test_issue.py  test_model.py  test_parser.py  test_randomizedequalgain.py
objects/: Actor.py  ActorIssue.py  EqualExchange.py  EqualGainModel.py  Exchange.py  Model.py  RandomExchange.py  RandomRateModel.py  test_actor.py  test_actorIssue.py  test_exchange.py  test_model.py
objects/update_listeners/: exchanges_writer.py  externalities.py  initial_exchanges.py  observer.py  update_listener.py
