[project]
name = "decide-exchange-model"
version = "2022.1.28"
description = "Decide exchange model"
authors = [{ "name" = "Jelmer Draaijer", "email" = "info@jelmert.nl" }]
readme = "README.md"
packages = [{ include = "decide" }]
requires-python= ">=3.9"

dependencies = [
    "blinker==1.5",
    "matplotlib==3.6.0",
    "pandas==1.5.0",
    "numpy==1.23.4",
    "typesystem==0.2.5",
    "peewee==3.14.4",
    "requests",
    "pyqt5-qt5==5.15.2",
    "pyqt5==5.15.10"
]

[dependency-groups]
dev = [
    "pytest-qt>=4.4.0",
    "pytest>=8.3.5",
    "pytest-xvfb>=3.0.0",
]

#[tool.poetry.scripts]
#decide-cli = 'decide.cli:main'
#decide-gui = 'decide.gui:main'


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["decide"]
