[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "decide-exchange-model"
version = "2025.1.0"
description = "Decide exchange model"
readme = "README.md"
authors = [ { "name" = "Jelmer Draaijer", "email" = "info@jelmert.nl" } ]
requires-python = ">=3.9,<3.12"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "blinker==1.5",
  "matplotlib==3.6",
  "numpy==1.23.4",
  "pandas==1.5",
  "peewee==3.14.4",
  "pyqt5==5.15.11",
  "pyqt5-qt5==5.15.2",
  "requests",
  "typesystem==0.2.5",
]

packages = [ { include = "decide" } ]

[dependency-groups]
#[tool.poetry.scripts]
#decide-cli = 'decide.cli:main'
#decide-gui = 'decide.gui:main'

dev = [
  "pre-commit-uv>=4.1.4",
  "pytest>=8.3.5",
  "pytest-qt>=4.4",
  "pytest-xvfb>=3",
  "ruff>=0.11.2",
]

[tool.hatch.build.targets.wheel]
packages = [ "decide" ]

[tool.ruff]
# Assume Python 3.9
target-version = "py39"

# Same as Black.
line-length = 120
indent-width = 4

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

# Like Black, indent with spaces, rather than tabs.
format.indent-style = "space"
# Like Black, use double quotes for strings.
format.quote-style = "double"
# Like Black, automatically detect the appropriate line ending.
format.line-ending = "auto"
# Like Black, respect magic trailing commas.
format.skip-magic-trailing-comma = false
# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
format.docstring-code-line-length = "dynamic"
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
format.docstring-code-format = false
lint.select = [ "ALL" ]
lint.ignore = [ "D" ]
# Allow fix for all enabled rules (when `--fix`) is provided.
lint.fixable = [ "ALL" ]
lint.unfixable = [  ]
# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
lint.isort = true
