[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "decide-exchange-model"
version = "2025.3.1"
description = "Decide exchange model"
readme = "README.md"
authors = [ { "name" = "Jelmer Draaijer", "email" = "info@jelmert.nl" } ]
requires-python = "==3.13.*"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "blinker==1.9.0",
  "matplotlib==3.10.7",
  "numpy==2.3.4",
  "pandas==2.3.3",
  "peewee==3.14.4",
  "pyqt6==6.10.0",
  "requests",
  "structlog==25.5",
  "typer==0.20",
  "typesystem==0.2.5",
]

scripts.decide-cli = "decide.cli:main"
gui-scripts.decide-gui = "decide.gui:main"
packages = [ { include = "decide" } ]

[dependency-groups]
dev = [
  "coverage==7.11.0",
  "pre-commit-uv==4.2.0",
  "pyrefly==0.40.0",
  "pytest==8.4.2",
  "pytest-qt==4.5.0",
  "pytest-xvfb==3.1.1",
  "ruff==0.14.3",
  "toml==0.10.2",
]

[tool.hatch.build.targets.wheel]
packages = [ "decide" ]

[tool.ruff]
target-version = "py313"

# Same as Black.
line-length = 100
indent-width = 4

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

# Like Black, indent with spaces, rather than tabs.
format.indent-style = "space"
# Like Black, use double quotes for strings.
format.quote-style = "double"
# Like Black, automatically detect the appropriate line ending.
format.line-ending = "auto"
# Like Black, respect magic trailing commas.
format.skip-magic-trailing-comma = false
# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
format.docstring-code-line-length = "dynamic"
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
format.docstring-code-format = false
lint.select = [ "ALL" ]
lint.ignore = [ "ANN", "D" ]
# Allow fix for all enabled rules (when `--fix`) is provided.
lint.fixable = [ "ALL" ]
lint.unfixable = [  ]
# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

lint.isort.force-single-line = true

[tool.pyrefly]
project-includes = [ "**/*.py*" ]
